--- a/Result-new.html
+++ b/Result-new.html
@@ -168,7 +168,7 @@
 
   <!-- Date Now button with heat animation -->
 <div style="margin-bottom: 30px;">
-  <a href="/signin.html">
+  <a href="/get-lucky.html">
     <button class="heat-button">DATE NOW</button>
   </a>
 </div>
