--- a/secret-invite.html
+++ b/secret-invite.html
@@ -20,7 +20,7 @@
   .page-wrap{min-height:100svh;padding:20px;border:2px solid var(--gold);position:relative}
 
   /* Logo */
-  .header{display:flex;align-items:center;justify-content:center;margin-bottom:10px}
+  .header{display:flex;align-items:center;justify-content:center;margin-bottom:24px} /* more space under logo */
   .logo{display:block;margin:0 auto;max-width:140px;width:140px;height:auto}
 
   /* Doors grid */
@@ -37,7 +37,7 @@
   /* Caption directly above door */
   .door-caption{
     font-size:15px;font-weight:700;letter-spacing:.2px;line-height:1.1;
-    margin:0 0 4px 0;               /* tiny gap above the image */
+    margin:0 0 4px 0;
   }
   .caption-blue{color:var(--blue)}
   .caption-green{color:var(--green)}
@@ -53,9 +53,17 @@
     user-select:none;-webkit-user-drag:none;pointer-events:none;
   }
 
-  /* Labels directly under door */
-  .door-label{font-size:16px;font-weight:700;opacity:.95;line-height:1.2;margin:4px 0 0 0}
-  .hint{font-size:12px;color:#bbb;text-align:center;margin:2px 0 0 0}
+  /* Single caption directly under each door (colored) */
+  .enter-caption{
+    margin-top:6px;
+    font-size:14px;
+    font-weight:700;
+    line-height:1.2;
+    letter-spacing:.2px;
+  }
+  .enter-blue{color:var(--blue)}
+  .enter-green{color:var(--green)}
+  .enter-red{color:var(--red)}
 
   /* Locked feedback */
   .shake{animation:shake .45s ease}
@@ -115,8 +123,7 @@
       <button class="door-btn" id="door-blue" aria-label="Blue room door">
         <img id="door-blue-img" alt="Blue door" src="" />
       </button>
-      <div class="door-label">Blue Room</div>
-      <div class="hint">Click door to enter the Blue room</div>
+      <div class="enter-caption enter-blue">Click door to enter the blue room</div>
     </div>
 
     <!-- GREEN -->
@@ -125,8 +132,7 @@
       <button class="door-btn" id="door-green" aria-label="Green room door">
         <img id="door-green-img" alt="Green door" src="" />
       </button>
-      <div class="door-label">Green Room</div>
-      <div class="hint">Click door to enter the Green room</div>
+      <div class="enter-caption enter-green">Click door to enter the green room</div>
     </div>
 
     <!-- RED -->
@@ -135,8 +141,7 @@
       <button class="door-btn" id="door-red" aria-label="Red room door">
         <img id="door-red-img" alt="Red door" src="" />
       </button>
-      <div class="door-label">Red Room</div>
-      <div class="hint">Click door to enter the Red room</div>
+      <div class="enter-caption enter-red">Click door to enter the red room</div>
     </div>
   </section>
 </div>
@@ -192,7 +197,7 @@ const COLOR_CLASS = { blue:"theme-blue", green:"theme-green", red:"theme-red" };
 const AREA_ID = "central-nj";
 
 /* ===========================
-   Door frames (put images in /door/)
+   Door frames (put images in /door/ )
    blue-door-1..7.png, green-door-1..7.png, red-door-1..7.png
 =========================== */
 const DOOR_FRAMES = {
@@ -217,12 +222,12 @@ doorImg.green.src=DOOR_CLOSED.green;
 doorImg.red.src=DOOR_CLOSED.red;
 ["blue","green","red"].forEach(c=>DOOR_FRAMES[c].forEach(src=>{const i=new Image();i.src=src;}));
 
-/* 150ms per frame animation; show modal after last frame */
+/* Faster animation: 120ms per frame */
 function playDoorAnimation(color){
   const frames=DOOR_FRAMES[color]; const img=doorImg[color];
   return new Promise(resolve=>{
     let i=0;
-    const step=()=>{ img.src=frames[i]; i++; if(i<frames.length){ setTimeout(step,150) } else { resolve() } };
+    const step=()=>{ img.src=frames[i]; i++; if(i<frames.length){ setTimeout(step,120) } else { resolve() } };
     step();
   });
 }
@@ -350,7 +355,7 @@ function lockedEffect(el){ el.classList.remove("shake"); void el.offsetWidth; el
    Door click handling
 =========================== */
 async function onDoorClick(color){
-  const myColor = getArchetypeColor();              // user's assigned color
+  const myColor = getArchetypeColor();
   const theme   = themeOfDay();
   const venue   = venueFor(AREA_ID, color);
   const today   = todayStr();
